dynamic matching pages finished

--- a/app/views/create-cases-add-products/what-is-the-product-category.html
+++ b/app/views/create-cases-add-products/what-is-the-product-category.html
@@ -77,13 +77,13 @@
         },
         classes: "govuk-input--width-10",
         hint: {
-            text: "Enter a subcategory. For example, Washing machine, Shampoo or Highchair.",
+            text: "Enter a descriptive subcategory. For example, Washing machine, Shampoo or Highchair.",
             classes: "govuk-!-font-size-16"
         },
         id: "subcategory",
         name: "subcategory",
         spellcheck: false,
-        classes: "govuk-!-width-one-third"
+        classes: "govuk-!-width-one-half"
         }) }}
 
         {{ govukButton({
