--- a/app/views/layout-user-testing.html
+++ b/app/views/layout-user-testing.html
@@ -34,16 +34,16 @@
   {% include "includes/head.html" %}
   <script>
     var data = [
-    {"id":"503","prod_name":"Sony 3000 hair dryer (x3000rpm)","brand":"Sony","prod_type":"Hair dryer","prod_category":"electrical goods","Subcategory":"Domestic electricals","prod_barcode":"2993-2765298","prod_img":"image_1.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"466","prod_name":"Dyson Animal 2","brand":"Sony","prod_type":"Vaccum cleaner","prod_category":"63","Subcategory":"Domestic electricals","prod_barcode":"2993-2765298", "prod_img":"image_2.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"108","prod_name":"Darren Harridence","brand":"Sony","prod_type":"86000","prod_category":"66","Subcategory":"Domestic electricals","prod_barcode":"2993-2765298","prod_img":"image_3.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"660","prod_name":"Dan Harridence","brand":"Sony","prod_type":"433060","prod_category":"22","Subcategory":"Domestic electricals","prod_barcode":"2021-08121969","prod_img":"image_4.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"278","prod_name":"Darren Harris","brand":"Sony","prod_type":"162700","prod_category":"33","Subcategory":"Domestic electricals","prod_barcode":"2993-2765298","prod_img":"image_5.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"396","prod_name":"Brielle Williamson","brand":"Sony","prod_type":"372000","prod_category":"61","Subcategory":"Domestic electricals","prod_barcode":"2993-2765298","prod_img":"image_6.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"119","prod_name":"Herrod Chandler","brand":"Sony","prod_type":"137500","prod_category":"59","Subcategory":"Domestic electricals","prod_barcode":"EIT-6666-08121869","prod_img":"image_7.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"448","prod_name":"Rhona Davidson","brand":"Sony","prod_type":"327900","prod_category":"55","Subcategory":"Domestic electricals","prod_barcode":"2993-2765298","prod_img":"image_8.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"402","prod_name":"Colleen Hurst","brand":"Sony","prod_type":"205500","prod_category":"39","Subcategory":"Domestic electricals","prod_barcode":"2993-2765298","prod_img":"image_9.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
-    {"id":"459","prod_name":"Sonya Frost","brand":"Sony","prod_type":"103600","prod_category":"23","Subcategory":"Domestic electricals","prod_barcode":"6666-08121869","prod_img":"image_10.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."}
+    {"id":"503","prod_name":"Sony 3000 hair dryer (x3000rpm)","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"Hair dryer","prod_category":"electrical goods","prod_modelno":"0001-2993","prod_barcode":"2993-2765298","prod_img":"image_1.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
+    {"id":"466","prod_name":"Dyson Animal 2","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"Vaccum cleaner","prod_category":"63","prod_modelno":"27998-2x","prod_barcode":"2993-2765298", "prod_img":"image_2.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
+    {"id":"108","prod_name":"Darren Harridence","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"86000","prod_category":"66","prod_modelno":"MB88279","prod_barcode":"2993-2765298","prod_img":"image_3.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
+    {"id":"660","prod_name":"Dan Harridence","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"433060","prod_category":"22","prod_modelno":"8990-1-02","prod_barcode":"2021-08121969","prod_img":"image_4.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
+    {"id":"278","prod_name":"Darren Harris","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"162700","prod_category":"33","prod_modelno":"TXM-220-3-4000","prod_barcode":"2993-2765298","prod_img":"image_5.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
+    {"id":"396","prod_name":"Brielle Williamson","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"372000","prod_category":"61","prod_modelno":"9086-34-126","prod_barcode":"2993-2765298","prod_img":"image_6.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
+    {"id":"119","prod_name":"Herrod Chandler","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"137500","prod_category":"59","prod_modelno":"7685-3325-1241","prod_barcode":"EIT-6666-08121869","prod_img":"img-hair-dryer.jpg","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
+    {"id":"448","prod_name":"Rhona Davidson","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"327900","prod_category":"55","prod_modelno":"0020-5231-7778xc","prod_barcode":"2993-2765298","prod_img":"image_8.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."},
+    {"id":"666","prod_name":"Rohan Bags","brand":"Rohan","name":"Bags","model":"Standard cotton","prod_subcategory":"Trousers","prod_category":"Clothing, textiles and fashion items","prod_modelno":"bags-501-00","prod_barcode":"23355-657-200","prod_img":"image_9.png","description":"The product description - cotton trousers - lorem ipsum dolor sit amet, consectetur adipiscing elit."},
+    {"id":"459","prod_name":"Sonya Frost","brand":"Sony","name":"Voom ball","model":"Animal 2","prod_subcategory":"103600","prod_category":"23","prod_modelno":"27664889-6223","prod_barcode":"6666-08121869","prod_img":"image_10.png","description":"The product description lorem ipsum dolor sit amet, consectetur adipiscing elit."}
     ];//var data = $.getJSON( '/public/javascripts/products.js');
   </script>
   <script src="/public/javascripts/jquery-1.11.3.js"></script>
@@ -92,6 +92,9 @@
 
     .hidden {visibility: hidden; }
     td.opss-temp-td {text-align: center !important; padding: 40px 10px; font-size: 1.4rem !important; }
+
+    .opss-panels__pair .govuk-summary-list__row dt,
+    .opss-panels__pair .govuk-summary-list__row dd {padding: 3px 0 !important;}
   </style>
 {% endblock %}
 
