--- a/app/views/product-case-testing/might-already-exist-bc.html
+++ b/app/views/product-case-testing/might-already-exist-bc.html
@@ -35,7 +35,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-<p>{{ data['barnumber'] }}</p>
+
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
             Is this your product?
         </h1>
@@ -54,23 +54,31 @@
                     <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-3">
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Brand </dt>
-                            <dd class="govuk-summary-list__value">Sony</dd>
+                            <dd id="brandName" class="govuk-summary-list__value"></dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Name </dt>
+                            <dd id="nameName" class="govuk-summary-list__value"></dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Model </dt>
+                            <dd id="modelName" class="govuk-summary-list__value"></dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Category </dt>
-                            <dd class="govuk-summary-list__value">Hair dryer</dd>
+                            <dd id="categoryName" class="govuk-summary-list__value"></dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Subcategory </dt>
-                            <dd class="govuk-summary-list__value">Domestic electricals</dd>
+                            <dd id="subcategoryName" class="govuk-summary-list__value"></dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Model <span class="opss-numero" title="Number">&numero;</span> </dt>
-                            <dd class="govuk-summary-list__value"><span class="govuk-visually-hidden">No model number provided</span>&nbsp;</dd>
+                            <dd id="modelNumber" class="govuk-summary-list__value"></dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Barcode </dt>
-                            <dd class="govuk-summary-list__value">666-6667-77777-7</dd>
+                            <dd id="barNumber" class="govuk-summary-list__value"></dd>
                         </div>
                     </dl>
 
@@ -80,20 +88,16 @@
                                 Product description
                             </span>
                         </summary>
-                        <div class="govuk-details__text">
-                            The product description lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut volutpat quam sapien. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed in libero urna. Nulla ut rhoncus magna, sagittis dapibus justo. Nullam blandit lacus et dui scelerisque, vel pretium lectus vulputate. In et ultrices sapien. Quisque pharetra, tortor scelerisque accumsan rhoncus, sem quam fermentum dui, non ornare neque mi ac justo.
-                        </div>
+                        <div id="descriptionTxt" class="govuk-details__text"></div>
                     </details>
 
                     <details class="govuk-details govuk-!-margin-bottom-3" data-module="govuk-details">
                         <summary class="govuk-details__summary">
                             <span class="govuk-details__summary-text">
-                                Product image<span class="govuk-visually-hidden">: Sony Xeria hair dryer</span>
+                                Product image
                             </span>
                         </summary>
-                        <div class="govuk-details__text">
-                            <img src="../public/images/hair-dryer.jpg" class="opss-details-img" alt="Sony hair dryer">
-                        </div>
+                        <div id="imageURL" class="govuk-details__text"></div>
                     </details>
 
             </section>
@@ -109,7 +113,19 @@
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Brand </dt>
                             <dd class="govuk-summary-list__value">
+                                <span class="govuk-visually-hidden">No brand name provided yet</span>&nbsp;
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Name </dt>
+                            <dd class="govuk-summary-list__value">
                                 <span class="govuk-visually-hidden">No product name provided yet</span>&nbsp;
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Model </dt>
+                            <dd class="govuk-summary-list__value">
+                                <span class="govuk-visually-hidden">No model name provided yet</span>&nbsp;
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
@@ -202,14 +218,18 @@
             fromTheProducts = val.prod_barcode.replace(/[^0-9]/g, '');
             if(barno == fromTheProducts){
                 $('#productName').text(val.prod_name);
+                $('#brandName').text(val.brand);
+                $('#nameName').text(val.name);
+                $('#modelName').text(val.model);
+                $('#categoryName').text(val.prod_category);
+                $('#subcategoryName').text(val.prod_subcategory);
+                $('#modelNumber').text(val.prod_modelno);
+                $('#barNumber').text(val.prod_barcode);
+                $('#descriptionTxt').text(val.description);
+                $('#imageURL').html('<img src="../public/images/products/'+val.prod_img+'" class="opss-details-img" alt="Product image">');
                 return false;
             }
         });
-
-
-
-
-
 
   });
 </script>
