--- a/app/views/product-case-testing/what-is-the-product-category.html
+++ b/app/views/product-case-testing/what-is-the-product-category.html
@@ -102,17 +102,15 @@
     Product subcategory
   </label>
 
-
-
   <div id="subcategory-hint" class="govuk-hint govuk-!-font-size-16">
-    Enter a subcategory. For example, Washing machine, Shampoo or Highchair.
+    Enter a descriptive subcategory. For example, Washing machine, Shampoo or Highchair.
   </div>
 
     <span id="subcategory-error" class="govuk-error-message">
     <span class="govuk-visually-hidden">Error:</span> Enter a subcategory
   </span>
 
-  <input class="govuk-input govuk-!-width-one-third" id="subcategory" name="subcategory" type="text" spellcheck="false" aria-describedby="subcategory-hint">
+  <input class="govuk-input govuk-!-width-one-half" id="subcategory" name="subcategory" type="text" spellcheck="false" aria-describedby="subcategory-hint">
 </div>
 
 
