--- a/app/views/product-case-testing/start.html
+++ b/app/views/product-case-testing/start.html
@@ -47,7 +47,7 @@
 
       <p class="govuk-body-l">The next page will open in a new tab:</p>
 
-      <a href="cases-page.html" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button" id="test-clear" target="_blank">
+      <a href="cases-page.html" id="test-clear" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button" target="_blank">
         Start now
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
@@ -68,10 +68,36 @@
 
   </div>
 
+{% endblock %}
+
+{% block bodyEnd %}
+
+  {% block scripts %}
+    {% include "includes/scripts-testing.html" %}
+    {% block pageScripts %}
+    {% endblock %}
+  {% endblock %}
+
 <script>
   jQuery(document).ready(function(){
 
     setMenuState('off');
+
+    $('#test-clear').click(function(e){
+      e.preventDefault();
+
+      localStorage.clear();
+      sessionStorage.clear();
+      window.localStorage.clear();
+
+      window.location.assign('cases-page.html');
+    });
+
+
+
+    //localStorage.removeItem(keyname);
+    //sessionStorage.removeItem("test1");
+
 
   });
 </script>
