new nanomaterial list design

--- a/app/views/create-cases-add-products/products-page.html
+++ b/app/views/create-cases-add-products/products-page.html
@@ -378,11 +378,11 @@
         </form-->
     </section>
 
-    <section class="govuk-grid-column-three-quarters">
+    <div class="govuk-grid-column-three-quarters">
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full" role="region" aria-label="Product lists">
+            <section class="govuk-grid-column-full" role="region" aria-label="Product lists">
 
-                <table id="table-items" class="govuk-table opss-table-items">
+                <table id="table-items" class="govuk-table opss-table-items opss-table-items--sm">
                     <caption class="govuk-visually-hidden">
                         Products data: The table features three columns and each product is described across corresponding rows within each table body.
                     </caption>
@@ -1142,9 +1142,9 @@
                 </nav>
 
 
-            </div>
+            </section>
         </div>
-    </section>
+    </div>
 
 </div>
 
