--- a/app/views/product-case-testing/cases-page.html
+++ b/app/views/product-case-testing/cases-page.html
@@ -105,7 +105,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full" role="region" aria-label="Case lists">
 
-                <table id="table-items" class="govuk-table opss-table-items">
+                <table id="table-items" class="govuk-table opss-table-items opss-table-items--sm">
                     <caption class="govuk-visually-hidden">
                         Cases data: The table features three columns and each case is described across corresponding rows within each table body.
                     </caption>
