--- a/app/views/index.html
+++ b/app/views/index.html
@@ -99,9 +99,10 @@
             <li><a class="govuk-link govuk-link--no-visited-state strike govuk-body-s" href="/nanomaterials-1149/cosmetic-products.html" target="_blank">Old - Cosmetic products</a></li>
           </ul>
         </li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials.html" target="_blank">Nanomaterials</a>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials.html" target="_blank">Nanomaterials</a> New list style
           <ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details.html" target="_blank">Nanomaterial details</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/nanomaterials-1149/nanomaterials-old.html" target="_blank">Nanomaterials - old</a></li>
           </ul>
         </li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/responsible-person.html" target="_blank">Responsible person</a></li>
